--- a/app/views/accessors/_info.html.slim
+++ b/app/views/accessors/_info.html.slim
@@ -3,11 +3,11 @@ h3
 p
   = t('accessors.info.write')
   ' : 
-  = #{access_target.accessors.writers.map{|accessor| accessor.fullname}.join(', ')}
+  = access_target.accessors.writers.map{|accessor| accessor.fullname}.join(', ')
 p
   = t('accessors.info.read')
   ' :
-  = #{access_target.accessors.readers.map{|accessor| accessor.fullname}.join(', ')}
+  = access_target.accessors.readers.map{|accessor| accessor.fullname}.join(', ')
 
 - if access_target.access?(current_user, :write)
   h3
