--- a/app/views/taxbill_items/(error)_form.html.slim
+++ b/app/views/taxbill_items/(error)_form.html.slim
@@ -29,7 +29,7 @@ h2
       = f.submit
 
 - content_for :javascript do
-  script type="text/javascript"
+  - script type="text/javascript"
     $(function(){
       var unitprice = $('#taxbill_item_unitprice');
       var quantity = $('#taxbill_item_quantity');
