--- a/app/views/contacts/form/_phone_number.html.slim
+++ b/app/views/contacts/form/_phone_number.html.slim
@@ -1,7 +1,7 @@
 - 3.times { contact.phone_numbers.new }
 
 h3
-  = t('contacts_form.phonenumver.title')
+  = t('contacts_form.phonenumber.title')
 = contact_form.fields_for :phone_numbers do |phone_number_field|
   .phone-number-form
     p
