--- a/app/views/pettycashes/new.html.slim
+++ b/app/views/pettycashes/new.html.slim
@@ -4,8 +4,7 @@
 
 h2= t("common.title.new")
 
-= form_for(@pettycash,
-    :html => { :multipart => true } ) do |f|
+= form_for(@pettycash, html: { class: :tabular, multipart: true } ) do |f|
   = f.error_messages
   .box
     p
@@ -22,6 +21,5 @@ h2= t("common.title.new")
       = f.text_area :description
     p
       = render 'shared/attachments/form', form: f
-
   p
     = f.submit t('common.button.create')
