--- a/app/views/hrinfos/index.html.slim
+++ b/app/views/hrinfos/index.html.slim
@@ -1,21 +1,18 @@
-- if @retired == 'on'
-  - title t('.title') + " (" + t(".retired") + ")"
-- else
-  - title t('.title') + " (" + t(".current") + ")"
--  content_for :search do
+- content_for :search do
   = form_tag({:action => "index"}, :method => :get ) do
     = hidden_field_tag 'retired', @retired
     = t("common.title.search")
-    ' : 
+    ' :
     = text_field_tag 'q', params[:q]
+    = select_tag :search_type, options_for_select(Hrinfo::SEARCH_TYPE, params[:search_type]), "onchange" => "this.form.submit()"
 
 #show_command
   - if @user.ingroup?("admin")
     = link_to t('hrinfos.new.title'), new_hrinfo_path
 h2
-	= t('hrinfos.index.total')
-	' : 
-	= @hrinfos_count
+  = t('hrinfos.index.total')
+  ' :
+  = @hrinfos_count
 table#list-table
   tr
     th
@@ -28,7 +25,7 @@ table#list-table
       = Hrinfo.human_attribute_name('username')
     th
       = Hrinfo.human_attribute_name('joined_on')
-      
+
   - @hrinfos.each do |hrinfo|
     tr.selectable onclick="location.href='#{hrinfo_path(hrinfo)}'"
       td align="right"
@@ -44,9 +41,3 @@ table#list-table
         td
       td
         =h hrinfo.joined_on
-- if @user.ingroup?("admin")
-  #show_command
-    - if @retired == 'on'
-      = link_to t('.list_current'), :action => "index"
-    - else
-      = link_to t('.list_retired'), :action => "index", :retired=>"on"
