--- a/app/views/dayworkers/show.html.slim
+++ b/app/views/dayworkers/show.html.slim
@@ -13,4 +13,5 @@ ul
 div#show_command
   = link_to t('dayworkers.find_address'), find_contacts_path(target_class: dayworker.class, target: dayworker), :class => 'popup'
 h3= '...'
-= render 'contacts/item_for_hrinfo', contact: dayworker.contact, menu: false
+- unless dayworker.contact.nil?
+  = render 'contacts/item_for_hrinfo', contact: dayworker.contact, menu: false
