enrollment item model 추가

--- a/app/views/enrollments/dashboard.html.slim
+++ b/app/views/enrollments/dashboard.html.slim
@@ -3,5 +3,12 @@ h2 입사지원서 관리
 p
 	= link_to '기본정보 등록', [:edit, @enrollment]
 
+ul
+	li
+		= form_tag [:attach, @enrollment], multipart: true do
+			= label_tag :picture
+			= file_field_tag :picture
+			= submit_tag
+	
 
 
