--- a/app/views/enrollments/dashboard.html.slim
+++ b/app/views/enrollments/dashboard.html.slim
@@ -4,11 +4,4 @@ p
 	= link_to '기본정보 등록', [:edit, @enrollment]
 
 ul
-	li
-		= form_tag [:attach, @enrollment], multipart: true do
-			= label_tag :picture
-			= file_field_tag :picture
-			= submit_tag
-	
-
-
+	li = link_to "명함판 사진", attach_item_enrollment_path(@enrollment, item: "picture")
