--- a/app/views/enrollments/attach_item.html.slim
+++ b/app/views/enrollments/attach_item.html.slim
@@ -1,9 +1,11 @@
-ul 
-- @item.attachments.each do |attachment|
-	li = attachment.original_filename
+ul
+- if @item.present?
+	- @item.attachments.each do |attachment|
+		li = attachment.original_filename
 
 
 = form_tag [:attach, @enrollment], multipart: true do
 	= label_tag :picture
+	= hidden_field_tag :name, params[:name]
 	= file_field_tag :picture
 	= submit_tag '추가'
