업로드 이미지 삭제

--- a/app/views/enrollments/attach_item.html.slim
+++ b/app/views/enrollments/attach_item.html.slim
@@ -1,7 +1,9 @@
 ul
 - if @item.present?
 	- @item.attachments.each do |attachment|
-		li = attachment.original_filename
+		li
+			= attachment.original_filename
+			= link_to "[x]", delete_attachment_enrollment_path(attachment_id: attachment.id), method: :delete, confirm: "Are you sure?"
 
 
 = form_tag [:attach, @enrollment], multipart: true do
