--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -7,4 +7,4 @@
         = link_to t("common.link.logout"), users_logout_path
   ul
     li
-      = link_to t("common.title.main"), :controller => "main", :action => "index"
+      = link_to t("common.title.main"), :controller => "/main", :action => "index"
