--- a/app/views/expense_reports/_form.html.slim
+++ b/app/views/expense_reports/_form.html.slim
@@ -29,3 +29,4 @@ h2= t("common.title.#{action_name}")
   #reference
     - target = target_type.constantize.find(target_id)
     = render "#{target_type.tableize}/detail", target: target
+  .clear
