--- a/app/views/business_clients/index.html.slim
+++ b/app/views/business_clients/index.html.slim
@@ -40,4 +40,4 @@
       = will_paginate @business_clients
 - else
   h3
-    = t 'business_clients.index.empty'
+    = t ('business_clients.index.empty')
