--- a/app/views/documents/edit.html.slim
+++ b/app/views/documents/edit.html.slim
@@ -34,4 +34,5 @@ h2
       = label_tag :username, t(".adduser")
       = text_field_tag :username
   = submit_tag t("common.button.add"), :id => "submit"
+  .clear
 = render 'tags/form', target: document
