--- a/app/views/users/_detail.html.slim
+++ b/app/views/users/_detail.html.slim
@@ -13,12 +13,12 @@ h2= user.name
     =render "shared/attachments/detail", target: user
 
     - if user.google_account?
-      = button_to t("users.google.destroy"), [:google_apps, user], method: :delete
+      = button_to t("users.google.destroy"), [:google_apps, user], method: :delete, confirm: t("common.messages.delete_confirm")
     - else
       = button_to t("users.google.create"), [:google_apps, user], method: :post
 
     - if user.redmine_account?
-        = button_to t("users.redmine.destroy"), [:redmine, user], method: :delete
+        = button_to t("users.redmine.destroy"), [:redmine, user], method: :delete, confirm: t("common.messages.delete_confirm")
     - else
       = button_to t("users.redmine.create"), [:redmine, user], method: :post
 
