--- a/app/views/bank_accounts/show.html.slim
+++ b/app/views/bank_accounts/show.html.slim
@@ -28,3 +28,27 @@ h2 ...
 
 .clear
 = render 'changelog', target: bank_account
+
+#show_command
+  = link_to t('bank_transactions.title'), bank_transactions_path(bank_account_id: bank_account.id)
+  = " | "
+  = link_to t('bank_transfers.title'), bank_transfers_path(bank_account_id: bank_account.id)
+  = " | "
+  = link_to t('common.link.edit'), [:edit, bank_account]
+  = " | "
+  = link_to t('common.link.destroy'), bank_account, :method => :delete, :confirm => "Are you sure?"
+  = " | "
+  = link_to t('common.title.list'), :bank_accounts
+
+h2 ...
+
+.box
+  #descr
+    dl
+      = dtdd bank_account, "name"
+      = dtdd bank_account, "number"
+      = dtdd bank_account, "note"
+  = render "shared/attachments/detail", :target => bank_account
+
+.clear
+= render 'changelog', target: bank_account
