--- a/app/views/contacts/_item.html.slim
+++ b/app/views/contacts/_item.html.slim
@@ -26,7 +26,7 @@ table
         td
           = link_to t('common.link.edit'), [:edit, contact]
           = " | "
-          = link_to t('contacts.item.remove'), [contact, email], :method => :delete, :confirm => "Are you sure?"
+          = link_to t('contacts.item.remove'), [contact, email], :method => :delete, confirm: t("common.messages.delete_confirm")
 
   - contact.phone_numbers.each do |phone_number|
     tr
@@ -38,7 +38,7 @@ table
         td
           = link_to t('common.link.edit'), [:edit, contact]
           = " | "
-          = link_to t('contacts.item.remove'), [contact, phone_number], :method => :delete, :confirm => "Are you sure?"
+          = link_to t('contacts.item.remove'), [contact, phone_number], :method => :delete, confirm: t("common.messages.delete_confirm")
 
   - contact.addresses.each do |address|
     tr
@@ -50,7 +50,7 @@ table
         td
           = link_to t('common.link.edit'), [:edit, contact]
           = " | "
-          = link_to t('contacts.item.remove'), [contact, address], :method => :delete, :confirm => "Are you sure?"
+          = link_to t('contacts.item.remove'), [contact, address], :method => :delete, confirm: t("common.messages.delete_confirm")
 
   - contact.others.each do |other|
     tr
@@ -60,7 +60,7 @@ table
         td
           = link_to t('common.link.edit'), [:edit, contact]
           = " | "
-          = link_to t('contacts.item.remove'), [contact, other], :method => :delete, :confirm => "Are you sure?"
+          = link_to t('contacts.item.remove'), [contact, other], :method => :delete, confirm: t("common.messages.delete_confirm")
   tr
     th= Document.human_attribute_name("tags")
     td= contact.tag_list
