--- a/app/views/bank_transactions/show.html.slim
+++ b/app/views/bank_transactions/show.html.slim
@@ -5,7 +5,7 @@
     = " | "
   = link_to t('common.link.edit'), edit_bank_transaction_path(bank_transaction, bank_account_id: bank_transaction.bank_account)
   = " | "
-  = link_to t('common.link.destroy'), bank_transaction, :method => :delete, :confirm => "Are you sure?"
+  = link_to t('common.link.destroy'), bank_transaction, :method => :delete, confirm: t("common.messages.delete_confirm")
   = " | "
   = link_to t('common.title.back'), :bank_transactions
 
@@ -50,4 +50,3 @@ h2
     tr
       th= BankTransaction.human_attribute_name(:cms_code)
       td= bank_transaction.cms_code
-      
