--- a/app/views/card_approved_sources/show.html.slim
+++ b/app/views/card_approved_sources/show.html.slim
@@ -4,7 +4,7 @@
     = " | "
   = link_to t('common.link.edit'), edit_card_approved_source_path(card_approved_source, creditcard_id: card_approved_source.creditcard)
   = " | "
-  = link_to t('common.link.destroy'), card_approved_source, :method => :delete, :confirm => "Are you sure?"
+  = link_to t('common.link.destroy'), card_approved_source, :method => :delete, confirm: t("common.messages.delete_confirm")
   = " | "
   = link_to t('common.title.back'), :card_approved_sources
 
