--- a/app/views/contacts/show.html.slim
+++ b/app/views/contacts/show.html.slim
@@ -2,7 +2,7 @@
   - if contact.edit?(current_user)
     = link_to t('common.link.edit'), [:edit, contact]
     = " | "
-    = link_to t('common.link.destroy'), contact, :method => :delete, :confirm => "Are you sure?"
+    = link_to t('common.link.destroy'), contact, :method => :delete, confirm: t("common.messages.delete_confirm")
     = " | "
   = link_to t('common.title.back'), :contacts
 
