--- a/app/views/namecards/show.html.slim
+++ b/app/views/namecards/show.html.slim
@@ -2,7 +2,7 @@
 #show_command
   = link_to t('common.title.edit'), edit_namecard_path(@namecard)
   ' |
-  = link_to t('common.title.destroy'), @namecard, :confirm => "Are you sure?", :method => :delete
+  = link_to t('common.title.destroy'), @namecard, :method => :delete, confirm: t("common.messages.delete_confirm")
   ' |
   = link_to t('common.title.list'), namecards_path
 h2
