--- a/app/views/taxbill_items/_form.html.erb
+++ b/app/views/taxbill_items/_form.html.erb
@@ -1,3 +1,43 @@
+<div id="show_command">
+  <%= link_to t('common.title.back'), taxbill %>
+</div>
+
+<h2><%= t("common.title.#{action_name}") %></h2>
+
+<%= form_for [taxbill, taxbill_item], html:{id: 'taxbill-form'} do |f| %>
+   <%= f.error_messages %>
+  <div class="box">
+    <p>
+      <%= f.label :unitprice %>
+      <%= f.text_field :unitprice %>
+    </p>
+    <p>
+      <%= f.label :quantity %>
+      <%= f.text_field :quantity %>
+    </p>
+    <p>
+      <%= f.label :tax %>
+      <%= f.text_field :tax %>
+    </p>
+    <p>
+      <%= f.label :total %>
+      <%= f.text_field :total %>
+    </p>
+    <p>
+      <%= f.label :transacted_at %>
+      <%= f.date_select :transacted_at, :order => [:year, :month, :day] %>
+    </p>
+    <p>
+      <%= f.label :note %>
+      <%= f.text_area :note %>
+    </p>
+    <p>
+      <%= f.submit %>
+    </p>
+  </div>
+<% end %>
+
+
 <% content_for :javascript do %>
   <script type="text/javascript">
     $(function(){
